# microservices-product-catalog

./: .gitignore  CLAUDE.md  Makefile  README.md  SEEDING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: phases.md  potential_smells.md  sdd.md
docs/api/: API_REFERENCE.md  characteristic-openapi.json  gateway-openapi.json  identity-openapi.json  offering-openapi.json  pricing-openapi.json  specification-openapi.json  store-openapi.json
docs/backend/: srs_backend.md
docs/camunda/: offering_publication_saga.bpmn
docs/frontend/: srs_frontend.md
docs/phases/: phases.md
docs/report/: report.md
infra/logstash/: es-template.json  logstash.conf
infra/postgres/: init-db.sql
libs/common-python/: pyproject.toml
libs/common-python/common/: config.py  exceptions.py  messaging.py  tracing.py
libs/common-python/common/database/: migrations.py
libs/common-python/common/testing/: __init__.py  containers.py
libs/common-python/common/utils/: versioning.py
libs/common-python/src/common/: camunda.py  camunda_rest.py  config.py  logging.py  messaging.py  schemas.py  security.py
libs/common-python/src/common/database/: migrations.py  outbox.py
libs/common-python/src/common/testing/: containers.py
libs/common-python/src/common/utils/: idempotency.py
libs/common-python/tests/: test_chassis.py  test_messaging.py  test_messaging_tracing.py  test_tracing.py
scripts/: check_infra.py  check_locks.py  clean_databases.py  deploy_camunda_bpmn.py  force_unlock_prices.py  generate_keys.sh  migrate.py  seed_data.py  wait_for_infra.py
services/api-gateway/: README.md  pyproject.toml
services/api-gateway/gateway/: config.py  main.py  resilience.py
services/api-gateway/tests/: conftest.py
services/api-gateway/tests/component/: test_gateway.py
services/characteristic-service/: README.md  pyproject.toml
services/characteristic-service/alembic/: env.py
services/characteristic-service/alembic/versions/: 6577b5f961a0_initial_migration.py  700000000000_add_outbox_table.py
services/characteristic-service/characteristic/: config.py  main.py
services/characteristic-service/characteristic/application/: events.py
services/characteristic-service/characteristic/domain/: models.py
services/characteristic-service/characteristic/infrastructure/: database.py  repository.py
services/characteristic-service/src/: config.py  main.py
services/characteristic-service/src/application/: events.py  schemas.py  service.py
services/characteristic-service/src/domain/: models.py
services/characteristic-service/src/infrastructure/: database.py  models.py  repository.py
services/characteristic-service/tests/: conftest.py
services/characteristic-service/tests/component/: test_api.py
services/characteristic-service/tests/integration/: conftest.py  test_api_integration.py  test_outbox_flow.py  test_repository.py
services/characteristic-service/tests/unit/: test_domain.py  test_service.py
services/identity-service/: .env.example  README.md  alembic.ini  pyproject.toml
services/identity-service/alembic/: env.py
services/identity-service/alembic/versions/: 7a3490beeb74_create_users_table.py  fdb2400b7f5a_initial_migration.py
services/identity-service/identity/: database.py  main.py  models.py
services/identity-service/src/: config.py  database.py  main.py  models.py  security.py  seed.py
services/identity-service/tests/: conftest.py
services/identity-service/tests/component/: test_auth_api.py
services/identity-service/tests/integration/: conftest.py  test_auth_integration.py
services/identity-service/tests/unit/: test_security.py
services/offering-service/: README.md  pyproject.toml
services/offering-service/alembic/: env.py
services/offering-service/alembic/versions/: 42f0338a44b8_initial_migration.py
services/offering-service/offering/: __main__.py  config.py  main.py  saga_worker.py
services/offering-service/offering/application/: events.py  schemas.py  service.py
services/offering-service/offering/domain/: models.py
services/offering-service/offering/infrastructure/: database.py  models.py  repository.py
services/offering-service/tests/: conftest.py
services/offering-service/tests/component/: test_offering_api.py
services/offering-service/tests/integration/: conftest.py  test_api_integration.py  test_offering_outbox.py  test_saga_simple.py
services/pricing-service/: README.md  pyproject.toml
services/pricing-service/alembic/: env.py
services/pricing-service/pricing/: config.py  main.py  saga_worker.py
services/pricing-service/src/: __main__.py  config.py  main.py  saga_worker.py
services/pricing-service/tests/: conftest.py
services/specification-service/: README.md  pyproject.toml
services/specification-service/alembic/: env.py
services/specification-service/specification/: config.py  saga_worker.py
services/specification-service/src/: __main__.py  config.py  main.py  saga_worker.py
services/specification-service/tests/: conftest.py
services/store-service/: README.md  pyproject.toml
services/store-service/store/: __main__.py  config.py  main.py  saga_worker.py
services/store-service/store/application/: consumers.py  service.py
services/store-service/store/infrastructure/: elasticsearch.py  mongodb.py
services/store-service/tests/: conftest.py
services/store-service/tests/component/: test_store_api.py
services/store-service/tests/integration/: conftest.py  test_store_retire_integration.py  test_store_sync_integration.py
services/store-service/tests/unit/: test_store_service.py
tests/e2e/: README.md  conftest.py  test_advanced_contracts.py  test_api_contracts.py  test_compensation_path_saga.py  test_happy_path_saga.py  test_service_security.py
web-ui/: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web-ui/src/app/: globals.css  layout.tsx  page.tsx
web-ui/src/app/builder/: page.tsx
web-ui/src/components/: Footer.tsx  Header.tsx  ProtectedRoute.tsx
web-ui/src/contexts/: AuthContext.tsx
web-ui/src/test/: setup.tsx
(+60 files in other folders)
