[project]
name = "microservices-product-catalog"
version = "0.1.0"
description = "TMF Product Catalog Microservices System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "testcontainers>=4.9.0",
    "httpx>=0.25.0",
    "psycopg2-binary>=2.9.9",
    "cryptography>=41.0.0",
]

[tool.uv.workspace]
members = ["services/*", "libs/*"]

[tool.uv]
managed = true

[tool.ruff]
# Relaxed rules for student project
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Select basic rules: Pyflakes (F), pycodestyle (E, W), isort (I)
select = ["F", "E", "W", "I"]
ignore = [
    "E501", # Ignore line length violations (already set 100, but be extra relaxed)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
