[project]
name = "store-service"
version = "0.1.0"
description = "Store Query Service (CQRS Read Model) for TMF Product Catalog"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "motor>=3.3.0",
    "elasticsearch[async]==8.11.1",
    "aio-pika>=9.3.0",
    "httpx>=0.25.0",
    "pydantic-settings>=2.1.0",
    "common-python",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "testcontainers>=4.9.0",
]

[tool.uv.sources]
common-python = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["store"]
